# graph-bench

./: .gitignore  Cargo.toml  ISSUES.md  Justfile  PROGRESS.md  README.md  constitution.yml  graphbench.config.toml
crates/graphbench-api/: Cargo.toml
crates/graphbench-api/src/: api.rs  config.rs  db.rs  event_stream.rs  harness.rs  main.rs  websocket.rs
crates/graphbench-core/: Cargo.toml
crates/graphbench-core/src/: artifacts.rs  error.rs  fixtures.rs  graph.rs  lib.rs  logging.rs  strategy.rs  tasks.rs
crates/graphbench-harness/: Cargo.toml
crates/graphbench-harness/src/: graph_tools.rs  lib.rs  llm_client.rs  observability.rs  openrouter.rs  runtime.rs  scoring.rs  strategy.rs  tools.rs  turn_ledger.rs
crates/graphbench-store/: Cargo.toml
crates/graphbench-store/src/: lib.rs  run_store.rs
data/: graphbench.db
docs/: architecture.md  artifacts-and-schemas.md  codegraph.md  context-tracing-and-observability.md  context-window.md  development-plan.md  harness.md  index.md  scoring-and-evaluation.md  storage-ui-and-reproducibility.md  tasks-and-evidence.md
fixtures/: README.md
fixtures/graphbench-internal/: fixture.json  graph.snapshot.json
fixtures/stageflow/: fixture.json  graph.snapshot.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  server.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
frontend/src/: App.tsx  main.tsx  styles.css
reports/: README.md
reports/templates/: initial-benchmark-pass-report.md
schemas/: README.md  context-object.schema.json  context-window-section.schema.json  evidence-spec.schema.json  fixture-manifest.schema.json  run-manifest.schema.json  score-report.schema.json  strategy-config.schema.json  task-spec.schema.json  turn-trace.schema.json  versioning.md
strategies/: README.md  graph.broad-discovery.v1.json  graph.targeted-lexical-read.v1.json  history.strict-no-reread.v1.json  projection.high-recall.v1.json  projection.minimal.v1.json
tasks/: README.md
tasks/prepare-to-edit/: README.md  task-01.task.json  (+9 more)
traces/: README.md  benchmark-1773678025.events.jsonl  benchmark-1773678025.json  benchmark-1773678025.observability.json  benchmark-1773679232.events.jsonl  benchmark-1773679232.json  benchmark-1773679232.observability.json  benchmark-1773679238.events.jsonl  benchmark-1773679238.observability.json  benchmark-1773679486.events.jsonl  benchmark-1773679486.json  benchmark-1773679486.observability.json  benchmark-1773679744.events.jsonl  benchmark-1773679744.observability.json  smoke-mock-1773603300.events.jsonl  smoke-mock-1773603300.json  smoke-mock-1773603300.observability.json  smoke-mock-1773603359.events.jsonl  smoke-mock-1773603359.json  smoke-mock-1773603359.observability.json  smoke-mock-1773603576.events.jsonl  smoke-mock-1773603576.json  smoke-mock-1773603576.observability.json  smoke-mock-1773604186.events.jsonl  smoke-mock-1773604186.json  smoke-mock-1773604186.observability.json  smoke-mock-1773606830.events.jsonl  smoke-mock-1773606830.json  smoke-mock-1773606830.observability.json  smoke-mock-1773607216.events.jsonl  smoke-mock-1773607216.json  smoke-mock-1773607216.observability.json  smoke-mock-1773608704.events.jsonl  smoke-mock-1773608704.json  smoke-mock-1773608704.observability.json  smoke-mock-1773608876.events.jsonl  smoke-mock-1773608876.json  smoke-mock-1773608876.observability.json  smoke-mock-1773609289.events.jsonl  smoke-mock-1773609289.json  (+98 more)
(+23 files in other folders)
