[workspace]
members = [
    "crates/graphbench-core",
    "crates/graphbench-harness",
    "crates/graphbench-store",
    "crates/graphbench-api",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
