[package]
name = "graphbench-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sha2 = "0.10"
ucm-core = { path = "/home/antonio/programming/Hivemind/unified-content-protocol/crates/ucm-core" }
ucp-codegraph = { path = "/home/antonio/programming/Hivemind/unified-content-protocol/crates/ucp-codegraph" }

[lints]
workspace = true
